[package]
name = "stream-db"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
axum = "0.8.8"
ferris-says = "0.3.2"
fs2 = "0.4.3"
futures = "0.3.31"
quick-xml = { version = "0.39.0", features = ["async-tokio"] }
tokio-util = { version = "0.7.18", features = ["io"] }
tokio = { version = "1.49.0", features = ["rt-multi-thread", "fs"] }
uuid = { version = "1.19.0", features = ["v4"] }
async-stream = "0.3.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22.1"
chrono = { version = "0.4.43", features = ["std"] }
